# py-github-gui

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml  test-tkinter.yml
py_github_gui/: EntryWithPlaceholder.py  __main__.py
src/: __main__.py
