[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-github-gui-rackodo"
version = "1.0.4"
authors = [
  { name="Bash Elliott", email="rackodo.business@gmail.com" },
]
description = "Python GUI for Github using the Github API."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
	"PyGithub==1.58.1",
	"Pillow==9.5.0",
	"requests==2.28.2",
	"url_normalize==1.4.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rackodo/py-github-gui"
"Bug Tracker" = "https://github.com/rackodo/py-github-gui/issues"